# cteno-community

./: .gitignore  .snapshot-meta.json  README.md  README.zh-CN.md  package-lock.json  package.json  start-cteno.ps1  start-cteno.sh
apps/client/: .gitignore  TOOLS-BACKGROUND-RUNS.md  app.config.js  babel.config.js  index.html  index.ts  metro.config.js  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/client/desktop/: .gitignore  Cargo.toml  Info.plist  build.rs  create_ev_history_ppt.js  mcp_servers.yaml  new-energy-vehicle.pptx.js  tauri.conf.json  tauri.dev.conf.json  tauri.preview.conf.json  test-edit-improvements.sh  test-read-tool.sh  test-tool-executors.sh  test_memory.sh
apps/client/desktop/.cargo/: config.toml
apps/client/desktop/agents/flow-analyzer/: AGENT.md
apps/client/desktop/capabilities/: default.json  skill-store.json
apps/client/desktop/default_adapters/: github_issue-create.json  github_issues.json  github_me.json  github_pr-create.json  github_repo.json  google_search.json  hackernews_top.json  reddit_hot.json  reddit_search.json  reddit_thread.json  stackoverflow_search.json  twitter_search.json  twitter_tweets.json  twitter_user.json  wikipedia_summary.json  youtube_search.json  youtube_transcript.json  youtube_video.json
apps/client/desktop/helpers/: screen_overlay  screen_overlay.swift
apps/client/desktop/icons/: icon.icns
apps/client/desktop/resources/: Assets.car
apps/client/desktop/resources/Cteno.icon/: icon.json
apps/client/desktop/scripts/: ctenoctl_workspace_e2e.py  fix-icon.sh
apps/client/desktop/src/: agent_hooks.rs  agent_kind.rs  agent_owner.rs  agent_rpc_handler.rs  agent_sync_bridge.rs  auth_anonymous.rs  auth_store_boot.rs  command_interceptor.rs  db.rs  executor_normalizer.rs  executor_registry.rs  executor_session.rs  headless_auth.rs  lib.rs  local_services.rs  main.rs  multi_agent.rs  quota_monitor.rs  service_init.rs  session_delivery.rs  session_message_codec.rs  session_relay.rs  session_store_impl.rs  session_sync_impl.rs  skill_store.rs  subagent_mirror.rs  tray.rs  usage_monitor.rs  webview_bridge.rs
apps/client/desktop/src/a2ui/: mod.rs
apps/client/desktop/src/commands/: agent.rs  auth.rs  executor_commands.rs  happy_commands.rs  local_host.rs  mod.rs  oauth_loopback.rs  session.rs
apps/client/desktop/src/happy_client/: local_sink.rs  manager.rs  mod.rs  permission.rs  profile_rpc.rs  runtime.rs  session_helpers.rs  socket.rs
apps/client/desktop/src/happy_client/session/: connection.rs  execution.rs  execution_state.rs  local.rs  local_rpc.rs  mod.rs  recovery.rs  registry.rs  remote.rs  spawn.rs  sync.rs  turn_preparation.rs  worker.rs
apps/client/desktop/src/host/: core.rs  daemon_runtime.rs  hooks.rs  local_rpc_server.rs  mod.rs  sessions.rs  shells.rs
apps/client/desktop/src/host/entrypoints/: cli.rs  daemon.rs  gui.rs  gui_commands.rs  gui_setup.rs  mod.rs
apps/client/desktop/src/orchestration/: mod.rs  models.rs  store.rs
apps/client/desktop/src/persona/: browser_prompt.rs  manager.rs  mod.rs  models.rs  prompt.rs  store.rs
apps/client/desktop/src/scheduler/: mod.rs  models.rs  store.rs  timer.rs
apps/client/desktop/src/task_graph/: engine.rs  mod.rs  models.rs
apps/client/desktop/src/tool_executors/: ask_persona.rs  close_task_session.rs  delete_scheduled_task.rs  dispatch_task.rs  list_scheduled_tasks.rs  list_task_sessions.rs  mod.rs  schedule_task.rs  send_to_session.rs  update_personality.rs
docs/: byok.md  claude-p1-protocol-findings.md  claude-permission-integration.md  codex-p1-protocol-findings.md  community.md  context-indicator-integration.md  cteno-p1-protocol-findings.md  desktop-permissions-checklist.md  dispatch-ipc-deadlock-postmortem.md  gemini-p1-live-captures.md  gemini-p1-protocol-findings.md  model-selector-integration.md  multi-vendor-message-gap-analysis.md  permission-mode-integration.md  plugin-principles-and-tauri-integration-plan.md  privacy.md  skill-system-architecture.md  task-gated-coding.md  workspace-redesign.md
scripts/: check-client-package-boundaries.mjs  cteno-dev-supervisor.sh  dev-community-tauri.sh  export-community-snapshot.sh  run-auth-gate.sh  run-bg-tasks-gate.sh  run-cteno-agent-dialogue-gate.sh
tests/e2e/: browser-helpers.sh  e2eDriver.ts
tests/eval/: adapter-timeout-error-surface.md  agent-executor-hotswap.md  agent-executor-unified.md  agent-token-injection.md  agents-md-unified.md  bg-05-rpc-handlers.md  bg-tasks-canonical.md  browser-adapter-first.md  browser-exploration.md  browser-tools-integration.md  byok-coding-plan.md  claude-connection-reuse.md  codex-connection-reuse.md  codex-context-usage.md  cross-vendor-memory-e2e.md  cteno-agent-dialogue.md  cteno-auth-transition.md  cteno-connection-reuse.md  cteno-context-usage.md  cteno-model-identity.md  cteno-runtime-dag.md  cteno-stdio-acp.md  cteno-stdio-dispatch-queue.md  ctenoctl-dispatch-wait.md  ctenoctl-rpc.md  custom-agent.md  e2e-app-navigation.md  e2e-webview-bridge.md  gemini-connection-reuse.md  gemini-image-generation.md  gemini-model-gate.md  host-bootstrap.md  injected-tool-ui.md  local-ipc-gateway.md  mcp-global-project-scope.md  memory-mcp.md  (+21 more)
(+538 files in other folders)
